# manna-audio-link

./: .gitignore  PRIVACY.md  README.md  configure-sender.ps1  current_state.md  decision_memory.md  install-laptop-send-shortcut.ps1  install-start-menu-shortcut.ps1  laptop-codex-build-prompt.md  launch-manna-send-audio.ps1  launch-manna-sound-sync.ps1  list-devices.ps1  next_steps.md  pyproject.toml  requirements.txt  roadmap.md  run-receiver.ps1  run-sender.ps1  setup.ps1  show-local-ip.ps1  task_state.json  uninstall-laptop-send-shortcut.ps1  uninstall-start-menu-shortcut.ps1
docs/: release-notes-v0.1.0.md  release-notes-v0.1.1.md  release-notes-v0.1.2.md  release-notes-v0.1.3.md
installer/: receiver.iss  sender.iss
scripts/: build-installers.ps1  smoke-installers.ps1
src/manna_audio_link/: __init__.py  audio_backend.py  cli.py  packet.py  tray_app.py
tests/: test_packet.py
